--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charSet="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style data-href="/styles.6c10e894568834fe2afa.css">
     @-webkit-keyframes pulsingBackground {
       0% {
